Turbo that fixes the whole domain to fit hypersistence needs, first integration test passed leading the way for the developing of the service layer